# litehttpd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY.md  DEVELOPMENT_LOG.md  FINAL_TEST_REPORT.md  HTACCESS_THREE_ENGINE_TEST_PLAN.md  PROJECT_SUMMARY.md  README.md  README_CN.md  REDIRECT_404_ANALYSIS.md  TEST_RESULTS_FINAL.md  skills-lock.json
docs/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
include/: htaccess_cache.h  htaccess_cidr.h  htaccess_directive.h  htaccess_exec_auth.h  htaccess_exec_brute_force.h  htaccess_exec_dirindex.h  htaccess_exec_error_doc.h  htaccess_exec_files_match.h  htaccess_exec_header.h  htaccess_exec_require.h  htaccess_exec_rewrite.h  htaccess_expr.h  htaccess_shm.h  ls.h  ols_native_api.h
integration-tests/: Dockerfile.ols  docker-compose.yml  init-db.sql  run_all.sh
packaging/: litehttpd.spec  openlitespeed-litehttpd.spec
patches/: 0001-lsiapi-phpconfig.patch  0002-lsiapi-rewrite.patch  0003-readapacheconf.patch  0004-autoindex-403.patch  README.md
src/: htaccess_cache.c  htaccess_cidr.c  htaccess_directive.c  htaccess_dirwalker.c  htaccess_exec_acl.c  htaccess_exec_auth.c  htaccess_exec_brute_force.c  htaccess_exec_dirindex.c  htaccess_exec_encoding.c  htaccess_exec_env.c  htaccess_exec_error_doc.c  htaccess_exec_expires.c  htaccess_exec_files_match.c  htaccess_exec_forcetype.c  htaccess_exec_handler.c  htaccess_exec_header.c  htaccess_exec_options.c  htaccess_exec_php.c  htaccess_exec_redirect.c  htaccess_exec_require.c  htaccess_exec_rewrite.c  htaccess_expires.c  htaccess_expr.c  htaccess_parser.c  htaccess_printer.c  htaccess_shm.c  lsiapi_shim.c  mod_htaccess.c  ols_native_api.c
tests/: CMakeLists.txt  check_consistency.sh  check_patches.sh  mock_lsiapi.cpp  mock_lsiapi.h
tests/compat/: test_compat.cpp
tests/e2e/: Dockerfile  Dockerfile.app  Dockerfile.custom-ols  Dockerfile.custom-ols.dockerignore  docker-compose.yml  run_app_tests.sh  test_apps.sh  test_directives.sh
tests/e2e/apps-matrix/: CASES_SCHEMA.md  Dockerfile.apache-runtime  Dockerfile.fixture  HANDOFF.md  MANIFEST.yaml  README.md  docker-compose.full.yml  prewarm_fixture_cache.sh  run_fixture_smoke.sh  run_full_matrix.sh  run_matrix.sh
tests/e2e/apps-matrix/config/: budget-policy.env  budgets.env  versions.env
tests/e2e/apps-matrix/lib/: collect_artifact_manifest.py  engine_compare.sh  fixture_common.sh  fixture_server.py  manifest_cases.py  matrix_common.sh  provision_fixture.py  real_app_config.py  real_install_common.sh  result_schema.json  run_cases.py  tune_budgets.py  validate_results.py
tests/e2e/apps-matrix/probes/: env.php  headers.php  router.php  server.php
tests/e2e/apps-matrix/scenarios/drupal/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/joomla/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/laravel/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/mediawiki/: cases.yaml  install.sh  notes.md  verify.sh
tests/e2e/apps-matrix/scenarios/nextcloud/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-core/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-ewww/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-litespeed-cache/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-redirection/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-w3-total-cache/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-wordfence/: cases.yaml  install.sh  notes.md
tests/e2e/apps-matrix/scenarios/wordpress-wp-optimize/: cases.yaml  install.sh  notes.md  verify.sh
tests/e2e/compare/: 0002-lsiapi-rewrite.patch  Dockerfile.apache  Dockerfile.lsws  Dockerfile.ols-module  Dockerfile.ols-native  P1_P2_TEST_SUMMARY.md  TEST_COVERAGE.md  compare_runner.sh  deploy-test-vps.sh  docker-compose.compare.yml  expected_diff.md  gen_coverage.sh  run-p3-security.sh  run_compare.sh
tests/e2e/compare/cases/: p0_cases.yaml  p1_cases.yaml  p2_cases.yaml
tests/e2e/compare/conf/: httpd_compare_module.conf  httpd_compare_native.conf  lsws_docker_template.xml  vhconf_compare.conf
tests/e2e/compare/htdocs/: .htaccess  app.js  dump.sql  index.html  index.php  secret.txt  wp-config.php
tests/e2e/compare/htdocs/_probe/: probe.php
tests/e2e/compare/htdocs/noindex/: somefile.txt
tests/e2e/compare/htdocs/p1_test/: .htaccess
tests/e2e/compare/htdocs/p2_test/: .htaccess
tests/e2e/compare/htdocs/protected/: .htaccess  .htpasswd  secret.php
tests/e2e/compare/htdocs/subdir/: .htaccess  custom.html  index.php
tests/e2e/conf/: httpd_config.conf  httpd_config_app.conf
tests/e2e/lib/: assertions.sh  coverage.sh
tests/e2e/vps-5engine/: benchmark-results.md  benchmark-round1-results.md  compatibility-results.md  deploy.sh  run-tests.sh
tests/fuzz/: fuzz_parser.cpp  fuzz_redirect.cpp
tests/fuzz/corpus/: filesmatch.txt  header.txt  ifmodule.txt  redirect.txt
tests/generators/: gen_directive.h
tests/property/: prop_auth_basic.cpp  prop_brute_force.cpp  prop_brute_force_v2.cpp  prop_cache.cpp  prop_dir_inherit.cpp  prop_dirindex.cpp  prop_env.cpp  prop_files_match.cpp  prop_generators_smoke.cpp  prop_header.cpp  prop_header_always.cpp  prop_options.cpp  prop_php_admin.cpp  prop_redirect.cpp  prop_require.cpp  prop_v2_roundtrip.cpp
tests/unit/: test_allow_override.cpp  test_apacheconf.cpp  test_brute_force_v2.cpp  test_cache.cpp  test_cidr.cpp  test_container_semantics.cpp  test_cross_cutting.cpp  test_dirwalker.cpp  test_errordoc_quote_fix.cpp  test_exec_auth.cpp  test_exec_brute_force.cpp  test_exec_dirindex.cpp  test_exec_expires_default.cpp  test_exec_header.cpp  test_exec_options.cpp  test_exec_redirect.cpp  test_exec_require.cpp  test_exec_rewrite.cpp  test_expires_parse.cpp  test_expr.cpp  test_integration.cpp  test_mock_lsiapi.cpp  test_parser.cpp  test_parser_v2.cpp  test_php_blacklist_fix.cpp  test_printer.cpp  test_shim_semantics.cpp
tools/: apacheconf_parser.c  apacheconf_parser.h  ols-confconv.c  (+2 more)
(+166 files in other folders)
